@@ -1,35 +1,28 @@
 package test.restcontroller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.strelnikov.doclib.dto.CatalogDto;
-import com.strelnikov.doclib.repository.jdbc.DatabaseCreatorJdbc;
-import com.strelnikov.doclib.service.impl.configuration.ServiceImplConfiguration;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.webapp.WebAppContext;
 import org.junit.*;
-import org.springframework.context.ApplicationContext;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class CatalogTest {
 
-    private static final ApplicationContext appContext = new AnnotationConfigApplicationContext(ServiceImplConfiguration.class);
-    private static final DatabaseCreatorJdbc creator = appContext.getBean(DatabaseCreatorJdbc.class);
-
     private static Server server;
-    private static String url = "http://localhost:12135/doclib-app/rest/catalog/";
 
     @BeforeClass
-    public static void initDb() throws Exception {
-        creator.runScript("src/test/resources/dbscripts/insertestdb.sql");
-        server = new Server(12135);
+    public static void init() throws Exception {
+        server = new Server(8080);
         WebAppContext wcon = new WebAppContext();
-        wcon.setContextPath("/doclib-app");
+        wcon.setContextPath("/");
         wcon.setDescriptor("src/test/webapp/web.xml");
         wcon.setResourceBase("src/test/webapp");
         wcon.setConfigurationDiscovered(true);
@@ -39,86 +32,75 @@ public class CatalogTest {
 
     @AfterClass
     public static void deleteTestData() throws Exception {
-        creator.runScript("src/test/resources/dbscripts/deletedb.sql");
         server.stop();
     }
 
-    @After
-    public void initMainCat() throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url+"post").openConnection();
-        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/CatalogTests/clearMainCat.json"));
-        connection.setDoOutput(true);
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("Content-Type","application/json");
-        connection.getOutputStream().write(requestBody);
-        connection.getOutputStream().flush();
-        connection.getResponseCode();
-        connection.disconnect();
-    }
-
     @Test
-    public void getCatalog() throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url + "get/1").openConnection();
-        String responseBody = new String(connection.getInputStream().readAllBytes());
-        ObjectMapper objectMapper = new ObjectMapper();
-        CatalogDto catalogDto = objectMapper.readValue(responseBody, CatalogDto.class);
-        connection.disconnect();
+    public void catalogGetTest() {
+        RestTemplate restTemplate = new RestTemplate();
+        HttpHeaders headers = new HttpHeaders();
+        headers.setBasicAuth("root", "root");
+        HttpEntity httpEntity = new HttpEntity(headers);
+        ResponseEntity<CatalogDto> responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/get/1",
+                HttpMethod.GET,
+                httpEntity,
+                CatalogDto.class);
+        CatalogDto catalogDto = responseEntity.getBody();
         Assert.assertEquals("/", catalogDto.getName());
     }
 
     @Test
-    public void createNewCatalog() throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url+"post").openConnection();
-        connection.setDoOutput(true);
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("Content-Type","application/json");
-        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/CatalogTests/addCatalog.json"));
-        connection.getOutputStream().write(requestBody);
-        connection.getOutputStream().flush();
-        String responseBody = new String(connection.getInputStream().readAllBytes());
-        connection.disconnect();
-        ObjectMapper objectMapper = new ObjectMapper();
-        CatalogDto catalogDto = objectMapper.readValue(responseBody, CatalogDto.class);
-        connection = (HttpURLConnection) new URL(url+"delete/" + catalogDto.getId()).openConnection();
-        connection.setRequestMethod("DELETE");
-        connection.getResponseCode();
-        connection.disconnect();
-        Assert.assertEquals("test_catalog1",catalogDto.getName());
+    public void createNewCatalogTest() throws IOException {
+        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/testCatalog.json"));
+        HttpHeaders headers = new HttpHeaders();
+        headers.setBasicAuth("root", "root");
+        headers.add("Content-Type", "application/json");
+        HttpEntity httpEntity = new HttpEntity(requestBody, headers);
+        RestTemplate restTemplate = new RestTemplate();
+        ResponseEntity<CatalogDto> responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/post",
+                HttpMethod.POST,
+                httpEntity,
+                CatalogDto.class);
+        CatalogDto catalogDto = responseEntity.getBody();
+        httpEntity = new HttpEntity(headers);
+        responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/delete/" + catalogDto.getId(),
+                HttpMethod.DELETE,
+                httpEntity,
+                CatalogDto.class);
+        Assert.assertEquals("test_catalog1", catalogDto.getName());
     }
 
     @Test
-    public void editCatalogTest() throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url + "post").openConnection();
-        ObjectMapper objectMapper = new ObjectMapper();
-        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/CatalogTests/editCatalog.json"));
-        connection.setDoOutput(true);
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("Content-Type","application/json");
-        connection.getOutputStream().write(requestBody);
-        connection.getOutputStream().flush();
-        String responseBody = new String(connection.getInputStream().readAllBytes());
-        connection.disconnect();
-        CatalogDto mainCatalog = objectMapper.readValue(responseBody,CatalogDto.class);
-        Assert.assertEquals("changed name", mainCatalog.getName());
-    }
-
-    @Test
-    public void deleteCatalogTest() throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url + "post").openConnection();
-        connection.setDoOutput(true);
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("Content-Type","application/json");
-        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/CatalogTests/addCatalog.json"));
-        connection.getOutputStream().write(requestBody);
-        connection.getOutputStream().flush();
-        String responseBody = new String(connection.getInputStream().readAllBytes());
-        connection.disconnect();
-        ObjectMapper objectMapper = new ObjectMapper();
-        CatalogDto catalogDto = objectMapper.readValue(responseBody, CatalogDto.class);
-        connection = (HttpURLConnection) new URL(url+"delete/" + catalogDto.getId()).openConnection();
-        connection.setRequestMethod("DELETE");
-        int actual = connection.getResponseCode();
-        connection.disconnect();
-        Assert.assertEquals(200,actual);
+    public void updateCatalogTest() throws IOException {
+        byte[] requestBody = Files.readAllBytes(Paths.get("src/test/resources/JSON/testCatalog.json"));
+        HttpHeaders headers = new HttpHeaders();
+        headers.setBasicAuth("root", "root");
+        headers.add("Content-Type", "application/json");
+        HttpEntity httpEntity = new HttpEntity(requestBody, headers);
+        RestTemplate restTemplate = new RestTemplate();
+        ResponseEntity<CatalogDto> responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/post",
+                HttpMethod.POST,
+                httpEntity,
+                CatalogDto.class);
+        CatalogDto catalogDto = responseEntity.getBody();
+        CatalogDto changedCat = new CatalogDto(catalogDto.getId(), "changed_name", 1, catalogDto.getContentList());
+        httpEntity = new HttpEntity(changedCat, headers);
+        responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/post",
+                HttpMethod.POST,
+                httpEntity,
+                CatalogDto.class);
+        catalogDto = responseEntity.getBody();
+        httpEntity = new HttpEntity(headers);
+        responseEntity = restTemplate.exchange(
+                "http://localhost:8080/rest/catalog/delete/" + catalogDto.getId(),
+                HttpMethod.DELETE,
+                httpEntity,
+                CatalogDto.class);
+        Assert.assertEquals("changed_name", catalogDto.getName());
     }
 }
